# computer-info-report-generator

./: Cargo.toml  Computer Info Report Generator Icon.psd  ComputerInfo.ps1  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
crates/cirg/: Cargo.toml
crates/cirg-cli/: Cargo.toml
crates/cirg-cli/src/: main.rs
crates/cirg/src/: audio_info.rs  computer_info.rs  cpu_info.rs  disk_info.rs  environment_info.rs  event_log_info.rs  gpu_info.rs  hotfix_info.rs  lib.rs  memory_info.rs  monitor_info.rs  network_info.rs  power_info.rs  process_info.rs  scheduled_task_info.rs  security_info.rs  service_info.rs  software_info.rs  startup_info.rs  usb_info.rs  users_groups_info.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Navigation.tsx
src/components/sections/: HardwareSection.tsx  NetworkSection.tsx  OverviewSection.tsx  PeripheralsSection.tsx  SecuritySection.tsx  SoftwareSection.tsx  StorageSection.tsx  SystemSection.tsx
src/components/shared/: AnimatedSection.tsx  DataField.tsx  ExportMenu.tsx  GlassCard.tsx  LoadingOverlay.tsx  SectionHeader.tsx  SettingsPopover.tsx  StatusChip.tsx
src/components/sidebar/: Sidebar.tsx
src/css/: index.css
src/hooks/: useSettings.ts  useSystemInfo.ts
src/pages/: Home.tsx
src/providers/: ThemeProvider.tsx
src/types/: system-info.ts
src/utils/: exportHtml.ts  exportMarkdown.ts  saveFile.ts
