[package]
name = "computer_info_report_generator"
version="3.0.0"
description = ""
authors = ["Drew Chase (Home) <dcmanproductions@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "computer_info_report_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros"] }
cirg = { path = "../crates/cirg" }
