[package]
name = "cirg"
version = "3.0.0"
edition = "2024"

[dependencies]
sysinfo = {version = "0.38.1", features = []}
wmi = {version = "0.18.1", features = ["chrono"]}
winreg = {version = "0.55.0"}
windows = {version = "0.62.2", features = [
    "Win32_Security_Tpm",
    "Win32_System_SystemServices",
]}
chrono = {version = "0.4.43", features = ["serde"]}
serde = {version = "1.0.228", features = ["derive"]}
anyhow = {version = "1.0.101"}
log = {version = "0.4.29"}
tokio = {version = "1.49.0", features = ["rt-multi-thread", "sync"]}
serde_json = "1.0.149"